# langchain-gpt

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agentic-ai-api/: Dockerfile
agentic-ai-api-react/: README.md  requirements.txt
agentic-ai-api-react/app/agents/: plan_execute.py
agentic-ai-api-react/app/core/: config.py
agentic-ai-api-react/app/routers/: chat.py
agentic-ai-api-react/app/schemas/: chat.py
agentic-ai-api/app/: main.py
agentic-ai-api/app/agents/: plan_execute.py
agentic-ai-api/app/core/: vectorstore.py
agentic-ai-api/app/loaders/: doc_loader.py
agentic-ai-api/app/routers/: chat.py
agentic-ai-api/frontend/: index.html
agentic-ai-api/tests/: test_chat.py
agentic-ai-async-memory/: example.txt  main.py
agentic-ai-inmemorychat/: main.py
agentic-ai-sqlite-memory/: main.py
